--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,6 @@
 name: Preview HTML
 
 on:
-  push:
-    branches:
-      - test
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -34,12 +31,13 @@ jobs:
     - name: Post PR comment with preview URL
       uses: actions/github-script@v6
       with:
+        github-token: ${{ secrets.TOKEN_GITHUB }}
         script: |
-          const previewUrl = `${steps.html_preview.outputs.url}`;
+          const previewUrl = steps.html_preview.outputs.url;
           const comment = `🚀 [Preview HTML File](${previewUrl})`;
-          github.issues.createComment({
+          github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.issue.number,
-            body: comment,
+            body: comment
           });
