--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-and-comment:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -25,17 +25,17 @@ jobs:
     - name: Get Artifact URL
       id: artifact_url
       run: |
-        ARTIFACT_URL=$(curl -s https://api.github.com/repos/${{ github.repository }}/actions/artifacts | jq -r '.artifacts[] | select(.name == "report") | .archive_download_url')
+        ARTIFACT_ID=$(curl -s https://api.github.com/repos/${{ github.repository }}/actions/artifacts | jq -r '.artifacts[] | select(.name == "report") | .id')
+        ARTIFACT_URL="https://github.com/${{ github.repository }}/suites/${{ github.run_id }}/artifacts/${ARTIFACT_ID}"
         echo "::set-output name=url::$ARTIFACT_URL"
 
     - name: Post comment with artifact URL
       uses: actions/github-script@v6
       with:
         script: |
-          const artifactUrl = '${{ steps.artifact_url.outputs.url }}';
-          github.issues.createComment({
+          github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.issue.number,
-            body: `The HTML report is available [here](${artifactUrl}).`
+            body: `The HTML report is available [here](${{ steps.artifact_url.outputs.url }}).`
           })
