--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,25 +17,25 @@ jobs:
         echo "<html><body><h1>Hello, World!</h1></body></html>" > report.html
 
     - name: Upload HTML artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v2
       with:
-        name: report
+        name: html-report
         path: report.html
 
-    - name: HTML Preview
-      id: html_preview
-      uses: pavi2410/html-preview-action@v2
+    - name: Download artifact
+      uses: actions/download-artifact@v2
       with:
-        html_file: 'report.html'
+        name: html-report
 
-    - name: Post comment with preview URL
+    - name: Post comment with download link
       uses: actions/github-script@v6
       with:
         github-token: ${{ secrets.TOKEN_GITHUB }}
         script: |
+          const artifactUrl = `https://github.com/${process.env.GITHUB_REPOSITORY}/releases/download/${process.env.GITHUB_RUN_ID}/report.html`;
           github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.issue.number,
-            body: `The HTML report is available for preview [here](${{ steps.html_preview.outputs.url }}).`
+            body: `The HTML report is available for download [here](${artifactUrl}).`
           })
