--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-and-comment:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -22,17 +22,36 @@ jobs:
         name: html-report
         path: report.html
 
-    - name: Download artifact
-      uses: actions/download-artifact@v2
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: html-report
+        tag_name: v1.0  # Specify a tag name for the release
+        release_name: Release v1.0  # Specify a release name
+        body: Initial release  # Specify release notes if needed
+
+    - name: Get Release ID
+      id: get_release_id
+      run: echo "::set-output name=release_id::${{ steps.create_release.outputs.id }}"
+
+    - name: Upload Artifact to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: report.html
+        asset_name: report.html
+        asset_content_type: text/html
 
     - name: Post comment with download link
       uses: actions/github-script@v6
       with:
-        github-token: ${{ secrets.TOKEN_GITHUB }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const artifactUrl = `https://github.com/${process.env.GITHUB_REPOSITORY}/releases/download/${process.env.GITHUB_RUN_ID}/report.html`;
+          const artifactUrl = `https://github.com/${process.env.GITHUB_REPOSITORY}/releases/download/${{ steps.get_release_id.outputs.release_id }}/report.html`;
           github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
