--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
       with:
         tag_name: v1.0  # Specify a tag name for the release
         release_name: Release v1.0  # Specify a release name
@@ -39,7 +39,7 @@ jobs:
     - name: Upload Artifact to Release
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: report.html
@@ -49,7 +49,7 @@ jobs:
     - name: Post comment with download link
       uses: actions/github-script@v6
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.TOKEN_GITHUB }}
         script: |
           const artifactUrl = `https://github.com/${process.env.GITHUB_REPOSITORY}/releases/download/${{ steps.get_release_id.outputs.release_id }}/report.html`;
           github.rest.issues.createComment({
