--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,9 +38,17 @@ jobs:
         with:
           publish-dir: artifact
 
+      - name: Install jq
+        run: sudo apt-get install jq
+
+      
+      - name: Extract Netlify URL
+        id: extract-url
+        run: echo "deploy-url=$(cat ${GITHUB_WORKSPACE}/artifact/.netlify/state.json | jq -r .deploy_url)" >> $GITHUB_ENV
+
       - name: Post comment on PR
         if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v1
         with:
-          message: 'Preview HTML Artifact: ${{ steps.netlify.outputs.deploy-url }}'
+          message: 'Preview HTML Artifact: ${{ env.deploy-url }}'
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
