--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,18 +37,18 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
           publish-dir: artifact
+        continue-on-error: true
 
-      - name: Install jq
-        run: sudo apt-get install jq
-
-      
-      - name: Extract Netlify URL
+      - name: Extract Netlify URL from logs
         id: extract-url
-        run: echo "deploy-url=$(cat ${GITHUB_WORKSPACE}/artifact/.netlify/state.json | jq -r .deploy_url)" >> $GITHUB_ENV
+        run: |
+          DEPLOY_LOG=$(cat $GITHUB_WORKSPACE/$(basename $(dirname $GITHUB_ACTION_PATH))/logs.txt)
+          DEPLOY_URL=$(echo "$DEPLOY_LOG" | grep -oP 'Website Draft URL:\s+\K\S+')
+          echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
 
       - name: Post comment on PR
         if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v1
         with:
-          message: 'Preview HTML Artifact: ${{ env.deploy-url }}'
+          message: 'Preview HTML Artifact: ${{ env.DEPLOY_URL }}'
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
