--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,12 +37,11 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
           publish-dir: artifact
-        continue-on-error: true
 
       - name: Extract Netlify URL from logs
         id: extract-url
         run: |
-          DEPLOY_LOG=$(cat $GITHUB_WORKSPACE/$(basename $(dirname $GITHUB_ACTION_PATH))/logs.txt)
+          DEPLOY_LOG=$(cat $GITHUB_WORKSPACE/netlify.log)
           DEPLOY_URL=$(echo "$DEPLOY_LOG" | grep -oP 'Website Draft URL:\s+\K\S+')
           echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
 
@@ -51,4 +50,17 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: 'Preview HTML Artifact: ${{ env.DEPLOY_URL }}'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy to Netlify and capture output
+        
+        run: |
+          npx netlify deploy --dir=artifact --site=$NETLIFY_SITE_ID --auth=$NETLIFY_AUTH_TOKEN --json | tee netlify.log
+
+      - name: Extract and comment Netlify deploy URL
+        run: |
+          url=$(cat netlify.log | jq -r '.deploy_url')
+          echo "Netlify deployment URL: $url"
+          gh pr comment ${{ github.event.pull_request.number }} --body "Preview HTML Artifact: $url"
+        env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
