--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,10 +22,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        env:
-          PYTHONPATH: ./src  # Add src to PYTHONPATH
         run: |
-          pytest --json-report --json-report-file=test_report.json
+          PYTHONPATH=./src pytest --json-report --json-report-file=test_report.json
 
       - name: Generate test summary
         run: python generate_summary.py
