--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,8 +22,10 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
+        env:
+          PYTHONPATH: ${{ github.workspace }}/src
         run: |
-          PYTHONPATH=./src pytest --json-report --json-report-file=test_report.json
+          pytest --json-report --json-report-file=test_report.json
 
       - name: Generate test summary
         run: python generate_summary.py
