--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,7 @@
 name: Job Action Summary
 
-
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   Summary:
@@ -31,6 +28,10 @@ jobs:
       - name: Run tests and generate JSON report
         run: |
           python -m pytest src --json-report --json-report-file=test_report.json
+
+      - name: Print JSON report for inspection
+        run: |
+          cat test_report.json
 
       - name: Generate test summary
         run: python generate_summary.py
