--- a/.github/workflows/jobaction.yaml
+++ b/.github/workflows/jobaction.yaml
@@ -1,20 +1,14 @@
-name: jobaction
+name: Generate Test Summary
 
 on:
   workflow_dispatch:
 
 jobs:
-  Summary:
-    name: Summary
-    runs-on: self-hosted
+  generate-summary:
+    runs-on: ubuntu-latest
     steps:
-      - name: Adding markdown
-        run: echo '### Hello world! 🚀' >> $GITHUB_STEP_SUMMARY
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Generate a table of test result
-        run: |
-          echo "| Test Result :test_tube: | Passed :green_circle: | Failed :x: | Skipped | Time Duration :alarm_clock: |" >> $GITHUB_STEP_SUMMARY
-          echo "| ------------| ------- | ------------- | ----------- | ------------ |" >> $GITHUB_STEP_SUMMARY
-          echo "| :green_circle: Pass | 122 | 0 | 3 | 12m 3s |" >> $GITHUB_STEP_SUMMARY
-          echo "| :x: Failed | 121 | 2 | 3 | 10m 3s |" >> $GITHUB_STEP_SUMMARY
-          echo "| :green_circle: Pass | 4 | 12 | 3 | 9m 4s |" >> $GITHUB_STEP_SUMMARY
+      - name: Run script to generate summary
+        run: python generate_summary.py test_report.json >> $GITHUB_STEP_SUMMARY
