--- a/.github/workflows/test_summary.yaml
+++ b/.github/workflows/test_summary.yaml
@@ -1,48 +1,20 @@
-name: Dynamic Test Summary
+name: HTML Preview
 
 on:
-  push:
+  pull_request:  # Trigger on pull request events
     branches:
-      - test
-  pull_request:
-    branches:
-      - main
-
+      - test 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  preview:
+    runs-on: ubuntu-latest  # Specify the runner environment
 
     steps:
-      # Checkout code
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3  # Checkout the repository code
 
-      # Set up Python
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: pavi2410/html-preview-action@v2  # Use the HTML Preview Action
         with:
-          python-version: '3.x'
+          html_file: 'index.html'  # Path to your HTML file (replace with your filename)
 
-      # Install dependencies
-      - name: Install dependencies
+      - name: Share Preview Link  # Optional step to print the URL
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-html beautifulsoup4
-
-      # Run tests and generate HTML report
-      - name: Run tests
-        run: |
-          pytest tests --html=test_report.html
-
-      # Parse HTML report and generate summary
-      - name: Parse HTML report and generate summary
-        run: |
-          python .github/scripts/parse_html_report.py test_report.html
-
-      # Upload test report as an artifact
-      - name: Upload test report
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-report
-          path: test_report.html
-
+          echo "Preview URL: ${{ steps.html_preview.outputs.url }}"
