--- a/.github/workflows/test_summary.yaml
+++ b/.github/workflows/test_summary.yaml
@@ -1,9 +1,12 @@
 name: HTML Preview
 
 on:
-  pull_request:  # Trigger on pull request events
+  push:
     branches:
-      - test 
+      - test
+  pull_request:
+    branches:
+      - main
 jobs:
   preview:
     runs-on: ubuntu-latest  # Specify the runner environment
